# sepolicy-inject-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: cil.rs  cil_source.rs  lib.rs  log.rs  main.rs  policy.rs  te.rs
src/ffi/: cil.cpp  cil.hpp  file.hpp  mmap.cpp  mmap.hpp  mod.rs  sepolicy.cpp  sepolicy.hpp  utils.hpp
src/parser/: ast.rs  cil.rs  mod.rs  parser.rs  policy.pest
tests/: cil_patch_test.rs  cil_test.rs  parser_test.rs
tests/fixtures/: example.te  extract_label.cil  precompiled_sepolicy
