[package]
name = "sepolicy-inject-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sepolicy-inject-rs"
path = "src/main.rs"

[lib]
name = "sepolicy"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "string"] }
cxx = "1.0.192"
pest = "2.8.4"
pest_derive = "2.8.4"
thiserror = "2.0.17"
m4rs = { git = "https://github.com/cyberphantom52/m4rs.git", rev = "923d4bbcfb50c23006a8faa4e5234204aa920f09" }

[build-dependencies]
cc = "1.2.49"
cxx-build = "1.0.192"
cxx-gen = "0.7.192"
